feat(build): revive dynamic launch4j exe generation, fix Gradle 9 compat (#719)
* feat(build): revive dynamic launch4j exe generation, fix Gradle 9 compat

TerasologyLauncher.exe has been a static, checked-in binary since #516
(2020) - build/launch4j generation was dropped in favor of it, leaving
distZip.exclude("*.x*.exe") and stale TODOs as the only trace. Restore
real generation via createExe, wired into the windows64 distribution in
jre.gradle in place of the old buildres/windows64 copy.

mainClassName is set explicitly (not left to the jar's own manifest
Class-Path) because the plugin only respects manifest Class-Path when
dontWrapJar=true; setting mainClassName switches it to explicit
classpath mode instead, so classpath = ["lib/*.jar"] is authoritative
regardless. bundledJrePath = "jre" is a runtime search path baked into
the exe (not a build-time copy) matching where jre.gradle already
unpacks the bundled JRE in the same distribution.

Verified end-to-end: createExe produces a real PE32 GUI binary, and
assembleWindows64Dist's output zip has TerasologyLauncher.exe at root,
lib/*.jar matching the wildcard classpath, and jre/bin/java(w).exe
(plus real JavaFX DLLs - jfxwebkit.dll, glass.dll, prism_d3d.dll -
confirming the Liberica "full" JRE choice) exactly where configured.

Getting createExe running at all surfaced three unrelated, pre-existing
Gradle 9 incompatibilities (reproduced against a clean checkout with
none of this change applied):

- name.remal.component-metadata:1.5.0 (abandoned since 2021) used the
  removed JavaPluginConvention. Applied but never actually configured
  anywhere in this build or buildSrc - the "clarify conflicting logging
  providers" comment describes the separate, self-contained gradlegoo
  buildSrc plugin instead. Removed.
- nebula.release:16.0.0's own dependency metadata requested
  grgit-core:4.0.2, which was never published to Maven Central, and
  separately used the removed ConfigureUtil internally. Bumped to
  21.0.0, which