@@ -57,6 +57,13 @@ final class GameStarter implements Callable<Process> {
         }
         processParameters.add("-DlogOverrideLevel=" + logLevel.name());
 
+        // Opts in to installing a SecurityManager for the module sandbox (ModuleManager.setupSandbox()).
+        // We bundle a JDK 17 JRE, where SecurityManager still works unconditionally and this flag is a
+        // no-op - kept anyway so the game keeps working correctly if we're ever bumped to JDK 18-23,
+        // where it becomes required. It stops working entirely (no flag can fix it) on JDK 24+, since
+        // JEP 486 removed the capability outright. See terasology#5357.
+        processParameters.add("-Djava.security.manager=allow");
+
         if (isMac && VersionHistory.LWJGL3.isProvidedBy(engineVersion)) {
             processParameters.add("-XstartOnFirstThread");  // lwjgl3 requires this on OS X
             // awt didn't work either, but maybe fixed on newer versions?
@@ -96,18 +103,18 @@ final class GameStarter implements Callable<Process> {
     }
 
     /**
-     * @return the executable {@code java} file to run the game with
+     * Returns the executable {@code java} file to run the game with.
      */
     Path getRuntimePath(Semver engineVersion) throws GameVersionNotSupportedException {
-        //TODO: Select the right JRE based on VersionHistory#getJavaVersionForEngine. Probably something along the lines
-        //      of the following:
-        //        Semver minJavaVersion = VersionHistory.getJavaVersionForEngine(engineVersion); // may throw GameVersionNotSupportedException
-        //        <Installation> JRE jre = JreManager.getJreFor(platform, minJavaVersion);       // may throw GameVersionNotSupportedException
+        //TODO: Once we bundle more than one JRE, select the right one based on
+        //      VersionHistory#getJavaVersionForEngine, e.g.:
+        //        Semver minJavaVersion = VersionHistory.getJavaVersionForEngine(engineVersion);
+        //        <Installation> JRE jre = JreManager.getJreFor(platform, minJavaVersion);
         //        return Paths.get(jre.getPath(), "bin", "java");
-        if (VersionHistory.JAVA17.isProvidedBy(engineVersion)) {
-            // throw exception as the version is not supported
-            throw new GameVersionNotSupportedException(engineVersion);
-        }
+        // For now we always bundle a single Java 17 JRE, which satisfies every minimum
+        // getJavaVersionForEngine can return (its highest floor is 17 itself) - so this call only
+        // needs to reject the genuinely-too-old case that method throws for on its own.
+        VersionHistory.getJavaVersionForEngine(engineVersion);
         return Paths.get(System.getProperty("java.home"), "bin", "java");
     }
 
